added popover options menu

--- a/ds_demo.html
+++ b/ds_demo.html
@@ -6,10 +6,12 @@
 		<script src="./resources/js/lodash.min.js"></script>
 		<script src="./resources/js/backbone-min.js"></script>
 		<script src="./resources/js/joint.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		
 		<!-- css for jquery-ui/jointjs -->
 		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/themes/smoothness/jquery-ui.css">
 		<link rel="stylesheet" href="./resources/css/joint.min.css"></link>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"></link>
 		
 		<!-- custom stylsesheet -->
 		<link rel="stylesheet" href="./resources/css/ds_style.css"></link>
