--- a/app/index.html
+++ b/app/index.html
@@ -17,22 +17,29 @@
 
     <!-- controllers -->
     <script src="features/navbar/NavBarController.js"></script>
+
+    <!-- directives -->
     <script src="features/navbar/NavBarDirective.js"></script>
+
+    <!-- components -->
+    <script src="components/tabs/tabDirectives.js"></script>
 
 </head>
 
+
 <body>
-    <header>
-        <nav-bar></nav-bar>
-    </header>
+<header>
+    <nav-bar></nav-bar>
+</header>
 
-    <section>
-        <ng-view></ng-view>
-    </section>
+<section>
+    <ng-view></ng-view>
+</section>
 
-    <footer>
-        <p>Footer</p>
-    </footer>
+<footer>
+    <p>Footer</p>
+</footer>
 </body>
+
 
 </html>
