--- a/app/index.html
+++ b/app/index.html
@@ -4,25 +4,33 @@
     <meta charset="UTF-8">
     <title>Web Service</title>
 
+    <!-- =============== JQuery ================== -->
+    <script src="scripts/jquery/jquery.js"></script>
+
     <!-- =============== Bootstrap =============== -->
-    <link rel="stylesheet" href="styles/vendor/bootstrap.css">
-    <link rel="stylesheet" href="styles/vendor/bootstrap-theme.css">
+    <link rel="stylesheet" href="styles/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="styles/bootstrap/dist/css/bootstrap-theme.css">
+    <link rel="stylesheet" href="styles/carousel.css">
 
     <!-- =============== AngularJS =============== -->
-    <script src="scripts/vendor/angular.js"></script>
+    <script src="scripts/angularjs/angular.js"></script>
     <script src="app.js"></script>
 
     <!-- ng-modules -->
-    <script src="scripts/vendor/angular-route.js"></script>
+    <script src="scripts/angularjs/angular-route.js"></script>
 
     <!-- controllers -->
     <script src="features/navbar/NavBarController.js"></script>
 
     <!-- directives -->
     <script src="features/navbar/NavBarDirective.js"></script>
+    <script src="features/carousel/carouselDirective.js"></script>
 
     <!-- components -->
     <script src="components/tabs/tabDirectives.js"></script>
+
+    <!-- =============== Stylesheet =============== -->
+    <link rel="stylesheet" href="styles/main.css">
 
 </head>
 
@@ -30,6 +38,7 @@
 <body>
 <header>
     <nav-bar></nav-bar>
+
 </header>
 
 <section>
@@ -39,6 +48,10 @@
 <footer>
     <p>Footer</p>
 </footer>
+
+<!-- ===============Bootstrap Core Javascript =============== -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="styles/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
 
