List all projects currently in the applications

--- a/app/index.html
+++ b/app/index.html
@@ -21,13 +21,21 @@
 
     <!-- controllers -->
     <script src="features/navbar/NavBarController.js"></script>
+    <script src="features/project/list/projectListController.js"></script>
 
     <!-- directives -->
     <script src="features/navbar/NavBarDirective.js"></script>
     <script src="features/carousel/carouselDirective.js"></script>
+    <script src="features/project/list/projectListDirective.js"></script>
 
     <!-- components -->
     <script src="components/tabs/tabDirectives.js"></script>
+
+    <!-- filters -->
+    <script src="components/filters/customFilters.js"></script>
+
+    <!-- factories -->
+    <script src="features/project/projectFactory.js"></script>
 
     <!-- =============== Stylesheet =============== -->
     <link rel="stylesheet" href="styles/main.css">
