Add a widget that display the active project.

--- a/app/features/navbar/NavBar.html
+++ b/app/features/navbar/NavBar.html
@@ -15,7 +15,7 @@
                     </li>
                 </ul>
                 <!-- a widget that display the current active project -->
-                <!-- TODO: create a service that display the current project here-->
+                <active-widget></active-widget>
             </div>
         </div>
     </nav>
