--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
     <script src="features/navbar/NavBarDirective.js"></script>
     <script src="features/carousel/carouselDirective.js"></script>
     <script src="features/project/list/projectListDirective.js"></script>
+    <script src="features/project/active_widget/activeWidget.js"></script>
 
     <!-- components -->
     <script src="components/tabs/tabDirectives.js"></script>
