--- a/app/index.html
+++ b/app/index.html
@@ -53,8 +53,12 @@
     <ng-view></ng-view>
 </section>
 
-<footer>
-    <p>Footer</p>
+<!-- =============== FOOTER =============== -->
+<footer class="container">
+    <hr>
+    <p class="pull-right"><a href="#">Back to top</a></p>
+    <p>&copy; 2016 Company, Inc. &middot; <a href="#">Privacy</a> &middot;
+        <a href="#">Terms</a></p>
 </footer>
 
 <!-- ===============Bootstrap Core Javascript =============== -->
