Create form directive, impl add project feature

--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
     <script src="features/carousel/carouselDirective.js"></script>
     <script src="features/project/list/projectListDirective.js"></script>
     <script src="features/project/active_widget/activeWidget.js"></script>
+    <script src="features/project/form/formDirective.js"></script>
 
     <!-- components -->
     <script src="components/tabs/tabDirectives.js"></script>
