Implement "current proejct" tab (view details)

--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
     <!-- controllers -->
     <script src="features/navbar/NavBarController.js"></script>
     <script src="features/project/list/projectListController.js"></script>
+    <script src="features/project/info/sidebarController.js"></script>
 
     <!-- directives -->
     <script src="features/navbar/NavBarDirective.js"></script>
@@ -29,6 +30,7 @@
     <script src="features/project/list/projectListDirective.js"></script>
     <script src="features/project/active_widget/activeWidget.js"></script>
     <script src="features/project/form/formDirective.js"></script>
+    <script src="features/project/info/projectInfoDirective.js"></script>
 
     <!-- components -->
     <script src="components/tabs/tabDirectives.js"></script>
