Impl "badges" for authors, add more fake data

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,8 @@
     <!-- =============== Stylesheet =============== -->
     <link rel="stylesheet" href="styles/main.css">
 
+    <!-- =============== Font Awesome =============== -->
+    <script src="https://use.fontawesome.com/c17d5be4dc.js"></script>
 </head>
 
 
