--- a/app/features/project/list/project-list.html
+++ b/app/features/project/list/project-list.html
@@ -1,15 +1,17 @@
 <!-- main container -->
-<div class="row" ng-controller="ProjectListCtrl">
+<div class="row">
     <!-- author category list container -->
     <div class="col-xs-3">
         <!-- the default button -->
-        <a ng-click="selectAuthor()" class="btn btn-block btn-default btn-lg">All</a>
+        <a ng-click="selectAuthor()" class="btn btn-block btn-default btn-lg">
+            All
+        </a>
         <!-- the buttons for each category (author) -->
         <a ng-repeat="author in projects | orderBy:'author' | unique: 'author'"
            ng-click="selectAuthor(author)"
            class="btn btn-block btn-default btn-lg"
            ng-class="getAuthorClass(author)">
-            {{author}}
+            {{author}} <span class="badge pull-right">{{ getAuthorCount(author) }}</span>
         </a>
     </div> <!-- end of author list container -->
 
@@ -42,13 +44,16 @@
                     <div class="btn-group" role="group" aria-label="...">
                         <button type="button" class="btn btn-default"
                                 ng-click="selectPanel(project)">
-                            Select
+                            <i class="fa fa-hand-pointer-o" aria-hidden="true">
+                                &nbsp;Select
+                            </i>
                         </button>
                         <button type="button" class="btn btn-default"
                                 data-toggle="modal"
                                 ng-click="editProject(project)"
                                 data-target="#myModal">
-                            Edit
+                            <i class="fa fa-pencil-square-o" aria-hidden="true">
+                                &nbsp;Edit</i>
                         </button>
                     </div>
                 </div> <!-- End of panel footer -->
@@ -56,7 +61,7 @@
             </div>
         </div> <!-- end of project list container -->
 
-        <!-- pagination -->
+        <!-- =============== PAGINATION =============== -->
         <div class="pull-right btn-group">
             <a ng-repeat="project in projects |  filter:authorFilter | pageCount:pageSize"
                ng-click="selectPage($index + 1)" class="btn btn-default"
@@ -64,7 +69,8 @@
                 {{$index + 1}}
             </a>
         </div>
-    </div> <!-- end of main container -->
+        <!-- =========================================== -->
+    </div>
 
 
     <!-- Modal: quick edit on selected project -->
@@ -90,7 +96,8 @@
                     </button>
                     <!-- delete current project button -->
                     <button type="button" data-dismiss="modal"
-                            ng-click="deleteProject(projectToBeEdited)" class="btn btn-danger">
+                            ng-click="deleteProject(projectToBeEdited)"
+                            class="btn btn-danger">
                         Delete
                     </button>
 
