--- a/app/index.html
+++ b/app/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <title>Web Service</title>
 
-    <!-- =============== JQuery ================== -->
+    <!-- =============== JoinJS =============== -->
+    <link rel="stylesheet" href="styles/joint.css"/>
     <script src="scripts/jquery/jquery.js"></script>
+    <script src="scripts/lodash.js"></script>
+    <script src="scripts/backbone.js"></script>
+    <script src="scripts/joint/joint.js"></script>
 
     <!-- =============== Bootstrap =============== -->
     <link rel="stylesheet" href="styles/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="styles/bootstrap/dist/css/bootstrap-theme.css">
     <link rel="stylesheet" href="styles/carousel.css">
+    <script src="styles/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <!-- =============== AngularJS =============== -->
     <script src="scripts/angularjs/angular.js"></script>
@@ -66,9 +71,6 @@
         <a href="#">Terms</a></p>
 </footer>
 
-<!-- ===============Bootstrap Core Javascript =============== -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="styles/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
 
