display err msg if no project - in graph nav tab

--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
     <script src="features/navbar/NavBarController.js"></script>
     <script src="features/project/list/projectListController.js"></script>
     <script src="features/project/info/sidebarController.js"></script>
+    <script src="features/graph/graphController.js"></script>
 
     <!-- directives -->
     <script src="features/navbar/NavBarDirective.js"></script>
@@ -57,6 +58,7 @@
 <body>
 <header>
     <nav-bar></nav-bar>
+    <carosuel></carosuel>
 </header>
 
 <section>
