Replace font-awesome cdn with actual css files

--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@
     <link rel="stylesheet" href="styles/main.css">
 
     <!-- =============== Font Awesome =============== -->
-    <script src="https://use.fontawesome.com/c17d5be4dc.js"></script>
+    <link rel="stylesheet" href="styles/font-awesome-4.6.3/css/font-awesome.css">
 </head>
 
 
