--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
     <script src="features/project/active_widget/activeWidget.js"></script>
     <script src="features/project/form/formDirective.js"></script>
     <script src="features/project/info/projectInfoDirective.js"></script>
+    <script src="components/buttons/run/runButtonDirective.js"></script>
 
     <!-- components -->
     <script src="components/tabs/tabDirectives.js"></script>
