--- a/app/features/project/info/project-info.html
+++ b/app/features/project/info/project-info.html
@@ -33,16 +33,17 @@
                 <dt>Options</dt>
                 <dd>
                     <div class="btn-group" role="group" aria-label="...">
-                        <button type="button" class="btn btn-default">
+                        <a ng-href="#graph" class="btn btn-default">
                             New &nbsp;
                             <i class="fa fa-plus" aria-hidden="true"></i>
-                        </button>
+                        </a>
                         <button type="button" class="btn btn-default">
                             Load &nbsp;
                             <i class="fa fa-file" aria-hidden="true"></i>
                         </button>
                     </div>
                 </dd>
+
                 <hr/>
             </dl>
             <hr/>
