--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Web Service</title>
 
-    <!-- =============== JoinJS =============== -->
+    <!-- =============== JointJS =============== -->
     <link rel="stylesheet" href="styles/joint.css"/>
     <script src="scripts/jquery/jquery.js"></script>
     <script src="scripts/lodash.js"></script>
