--- a/app/features/project/info/project-info.html
+++ b/app/features/project/info/project-info.html
@@ -32,16 +32,12 @@
                 <!-- create or load a webservice graph gui project -->
                 <dt>Options</dt>
                 <dd>
-                    <div class="btn-group" role="group" aria-label="...">
-                        <a ng-href="#graph" class="btn btn-default">
-                            New &nbsp;
-                            <i class="fa fa-plus" aria-hidden="true"></i>
-                        </a>
-                        <button type="button" class="btn btn-default">
-                            Load &nbsp;
-                            <i class="fa fa-file" aria-hidden="true"></i>
-                        </button>
-                    </div>
+
+                    <a ng-href="#graph" class="btn btn-default">
+                        Start Graph &nbsp;
+                        <i class="fa fa-play" aria-hidden="true"></i>
+                    </a>
+
                 </dd>
 
                 <hr/>
