Add a "reset" button to the graph page

--- a/app/features/graph/joint-graph.html
+++ b/app/features/graph/joint-graph.html
@@ -23,8 +23,10 @@
                 <dt></dt>
                 <dd>
                     <div class="btn-group" role="group" aria-label="...">
-                        <run-button run="Run Webservice"
-                                    stop="Stop Webservice"></run-button>
+                        <button type="button" class="btn btn-default">
+                            Reset &nbsp;
+                            <i class="fa fa-refresh fa-2x" aria-hidden="true"></i>
+                        </button>
                         <button type="button" class="btn btn-default">
                             Save &nbsp;
                             <i class="fa fa-floppy-o fa-2x" aria-hidden="true"></i>
@@ -34,6 +36,8 @@
                             Load &nbsp;
                             <i class="fa fa-eraser fa-2x" aria-hidden="true"></i>
                         </button>
+                        <run-button run="Run Webservice"
+                                    stop="Stop Webservice"></run-button>
                     </div>
                 </dd>
             </dl>
