implment loading and saving graphs

--- a/app/features/graph/joint-graph.html
+++ b/app/features/graph/joint-graph.html
@@ -23,18 +23,24 @@
                 <dt></dt>
                 <dd>
                     <div class="btn-group" role="group" aria-label="...">
-                        <button type="button" class="btn btn-default">
+                        <button ng-click="resetGraph()" type="button"
+                                class="btn btn-default">
                             Reset &nbsp;
-                            <i class="fa fa-refresh fa-2x" aria-hidden="true"></i>
+                            <i class="fa fa-refresh fa-2x"
+                               aria-hidden="true"></i>
                         </button>
-                        <button type="button" class="btn btn-default">
+                        <button ng-click="saveGraph()" type="button"
+                                class="btn btn-default">
                             Save &nbsp;
-                            <i class="fa fa-floppy-o fa-2x" aria-hidden="true"></i>
+                            <i class="fa fa-floppy-o fa-2x"
+                               aria-hidden="true"></i>
                         </button>
 
-                        <button type="button" class="btn btn-default">
+                        <button ng-click="loadGraph()" type="button"
+                                class="btn btn-default">
                             Load &nbsp;
-                            <i class="fa fa-eraser fa-2x" aria-hidden="true"></i>
+                            <i class="fa fa-eraser fa-2x"
+                               aria-hidden="true"></i>
                         </button>
                         <run-button run="Run Webservice"
                                     stop="Stop Webservice"></run-button>
@@ -44,84 +50,28 @@
         </div>
         <div id="paper" ng-show="getActiveProject().id"></div>
     </div>
-
 </div>
 
 
 <script>
-    var graph = new joint.dia.Graph();
-
+    /**
+     * MAIN_GRAPH is an empty Graph object instantiated from the
+     * joint_setup.js file
+     *
+     * When the user loads up a graph, they are reassigning MAIN_GRAPH to whatever
+     * graph the user has. It would look like this: MAIN_GRAPH = joeProject.graph
+     *
+     * The view will update base on whatever the graph is
+     *
+     * Paper is the container for the view, the window to the view.
+     */
     var paper = new joint.dia.Paper({
         el: $('#paper'),
         width: 1200,
         height: 600,
         gridSize: 1,
-        model: graph,
+        model: MAIN_GRAPH,
         perpendicularLinks: true,
         restrictTranslate: true
     });
-
-    var member = function (x, y, rank, name, image, background, textColor) {
-
-        textColor = textColor || "#000";
-
-        var cell = new joint.shapes.org.Member({
-            position: {x: x, y: y},
-            attrs: {
-                '.card': {fill: background, stroke: 'none'},
-                image: {'xlink:href': 'images/' + image, opacity: 0.7},
-                '.rank': {
-                    text: rank,
-                    fill: textColor,
-                    'word-spacing': '-5px',
-                    'letter-spacing': 0
-                },
-                '.name': {
-                    text: name,
-                    fill: textColor,
-                    'font-size': 13,
-                    'font-family': 'Arial',
-                    'letter-spacing': 0
-                }
-            }
-        });
-        graph.addCell(cell);
-        return cell;
-    };
-
-    function link(source, target, breakpoints) {
-
-        var cell = new joint.shapes.org.Arrow({
-            source: {id: source.id},
-            target: {id: target.id},
-            vertices: breakpoints,
-            attrs: {
-                '.connection': {
-                    'fill': 'none',
-                    'stroke-linejoin': 'round',
-                    'stroke-width': '2',
-                    'stroke': '#4b4a67'
-                }
-            }
-
-        });
-        graph.addCell(cell);
-        return cell;
-    }
-
-    var bart = member(300, 70, 'CEO', 'Bart Simpson', 'male.png', '#30d0c6');
-    var homer = member(90, 200, 'VP Marketing', 'Homer Simpson', 'male.png', '#7c68fd', '#f1f1f1');
-    var marge = member(300, 200, 'VP Sales', 'Marge Simpson', 'female.png', '#7c68fd', '#f1f1f1');
-    var lisa = member(500, 200, 'VP Production', 'Lisa Simpson', 'female.png', '#7c68fd', '#f1f1f1');
-    var maggie = member(400, 350, 'Manager', 'Maggie Simpson', 'female.png', '#feb563');
-    var lenny = member(190, 350, 'Manager', 'Lenny Leonard', 'male.png', '#feb563');
-    var carl = member(190, 500, 'Manager', 'Carl Carlson', 'male.png', '#feb563');
-
-
-    link(bart, marge, [{x: 385, y: 180}]);
-    link(bart, homer, [{x: 385, y: 180}, {x: 175, y: 180}]);
-    link(bart, lisa, [{x: 385, y: 180}, {x: 585, y: 180}]);
-    link(homer, lenny, [{x: 175, y: 380}]);
-    link(homer, carl, [{x: 175, y: 530}]);
-    link(marge, maggie, [{x: 385, y: 380}]);
 </script>
