--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <script src="scripts/lodash.js"></script>
     <script src="scripts/backbone.js"></script>
     <script src="scripts/joint/joint.js"></script>
+    <script src="features/graph/joint_setup.js"></script>
 
     <!-- =============== Bootstrap =============== -->
     <link rel="stylesheet" href="styles/bootstrap/dist/css/bootstrap.css">
