--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
 
     <!-- =============== Stylesheet =============== -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/hover.css">
 
     <!-- =============== Font Awesome =============== -->
     <link rel="stylesheet" href="styles/font-awesome-4.6.3/css/font-awesome.css">
