Add hover effects on joint-graph options

--- a/app/features/graph/joint-graph.html
+++ b/app/features/graph/joint-graph.html
@@ -23,28 +23,27 @@
                 <dt>Options:</dt>
                 <dd>
                     <div class="btn-group" role="group" aria-label="...">
-                        <button class="btn btn-default">
-                            <a ng-href="#project">
-                                Back &nbsp;
-                                <i class="fa fa-arrow-left fa-2x"
-                                   aria-hidden="true"></i>
-                            </a>
-                        </button>
+                        <a class="btn btn-default hvr-overline-from-center"
+                           ng-href="#project">
+                            Back &nbsp;
+                            <i class="fa fa-arrow-left fa-2x"
+                               aria-hidden="true"></i>
+                        </a>
                         <button ng-click="resetGraph()" type="button"
-                                class="btn btn-default">
+                                class="btn btn-default hvr-overline-from-center">
                             Reset &nbsp;
                             <i class="fa fa-eraser fa-2x"
                                aria-hidden="true"></i>
                         </button>
                         <button ng-click="saveGraph()" type="button"
-                                class="btn btn-default">
+                                class="btn btn-default hvr-overline-from-center">
                             Save &nbsp;
                             <i class="fa fa-floppy-o fa-2x"
                                aria-hidden="true"></i>
                         </button>
 
                         <button ng-click="loadGraph()" type="button"
-                                class="btn btn-default">
+                                class="btn btn-default hvr-overline-from-center">
                             Load &nbsp;
                             <i class="fa fa-refresh fa-2x"
                                aria-hidden="true"></i>
