--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,7 @@
     <!-- =============== Stylesheet =============== -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/hover.css">
+    <link rel="stylesheet" href="styles/bootstrap/js/tooltip.js">
 
     <!-- =============== Font Awesome =============== -->
     <link rel="stylesheet" href="styles/font-awesome-4.6.3/css/font-awesome.css">
