--- a/app/features/graph/joint-graph.html
+++ b/app/features/graph/joint-graph.html
@@ -30,32 +30,32 @@
                     <div class="btn-group" role="group" aria-label="...">
                         <a class="btn btn-default hvr-icon-back "
                            ng-href="#project"
-                            data-toggle="tooltip" data-placement="bottom"
+                            data-trigger="hover" data-placement="bottom"
                             title="Return to the project listings">
                             Back &nbsp;
                         </a>
                         <button ng-click="resetGraph()" type="button"
                                 class="btn btn-default hvr-icon-sink-away"
-                                data-toggle="tooltip" data-placement="bottom"
+                                data-trigger="hover" data-placement="bottom"
                                 title="Clear the graph. Be careful!">
                             Reset &nbsp;
                         </button>
                         <button ng-click="saveGraph()" type="button"
                                 class="btn btn-default hvr-icon-push"
-                                data-toggle="tooltip" data-placement="bottom"
+                                data-trigger="hover" data-placement="bottom"
                                 title="Save the current state of the graph for future used">
                             Save &nbsp;
                         </button>
 
                         <button ng-click="loadGraph()" type="button"
                                 class="btn btn-default hvr-icon-spin"
-                                data-toggle="tooltip" data-placement="bottom"
+                                data-trigger="hover" data-placement="bottom"
                                 title="Load the the graph previous saved state">
                             Load &nbsp;
                         </button>
                         <run-button run="Run Webservice"
                                     stop="Stop Webservice"
-                                    data-toggle="tooltip" data-placement="bottom"
+                                    data-trigger="hover" data-placement="bottom"
                                     title="Load the the graph previous saved state">
                         </run-button>
                     </div>
@@ -69,7 +69,7 @@
 
 <script>
     $(function() {
-        $('[data-toggle="tooltip"]').tooltip()
+        $('[data-trigger="hover"]').tooltip()
     });
 
     /**
